// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should add new endpoint 1`] = `
Array [
  Array [
    "Updating endpoint URL to:",
    "http://test.endpoint",
  ],
  Array [
    "Endpoint URL updated!",
  ],
]
`;

exports[`Should add second new endpoint 1`] = `
Array [
  Array [
    "Updating endpoint URL to:",
    "http://test",
  ],
  Array [
    "Endpoint URL updated!",
  ],
]
`;

exports[`Should not remove only endpoint 1`] = `
Array [
  Array [
    "Error!",
    "Cannot remove the only endpoint URL:",
    "http://localhost:8080",
  ],
]
`;

exports[`Should remove current endpoint using inquirer 1`] = `
Array [
  Array [
    "Removing endpoint:",
    "http://test.endpoint",
  ],
  Array [
    "Endpoint removed!",
  ],
]
`;

exports[`Should remove existing endpoint using param 1`] = `
Array [
  Array [
    "Removing endpoint:",
    "http://test",
  ],
  Array [
    "Endpoint removed!",
  ],
]
`;

exports[`Should select old endpoint 1`] = `
Array [
  Array [
    "Updating endpoint URL to:",
    "http://localhost:8080",
  ],
  Array [
    "Endpoint URL updated!",
  ],
]
`;

exports[`Should select old endpoint using URL param 1`] = `
Array [
  Array [
    "Updating endpoint URL to:",
    "http://test.endpoint",
  ],
  Array [
    "Endpoint URL updated!",
  ],
]
`;

exports[`Should show error on remove of non-existent endpoint 1`] = `
Array [
  Array [
    "Error!",
    "Couldn't find endpoint with URL:",
    "do-not-exist",
  ],
]
`;
